--- a/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
@@ -125,6 +125,10 @@
                                                     <th>Remaining</th>
                                                 }
                                                 <th class="text-center">Demand</th>
+                                                @if (Model.BillRequisitionTypeId != (int)EnumBillRequisitionType.Overhead)
+                                                {
+                                                    <th>Available</th>
+                                                }
                                                 <th class="text-center">Unit Price</th>
                                                 <th class="text-center">Total</th>
                                             </tr>
@@ -164,17 +168,27 @@
                                                     <td class="text-center">
                                                         @if (Model.StatusName == EnumBillRequisitionStatus.Pending.ToString() && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.QS).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                         {
-                                                            @Html.TextBoxFor(model => model.DetailDataList[i].DemandQty, new { id = "demandQty_" + i, @class = "form-control demandValue" })
+                                                            @Html.TextBoxFor(model => model.DetailDataList[i].DemandQty, new { value = "0", @class = "form-control demandValue", required = "true" })
+                                                            @Html.ValidationMessageFor(model => model.DetailDataList[i].DemandQty, "", new { @class = "text-danger" })
+                                                            <small class="text-center text-danger errorDemand"></small>
                                                         }
                                                         else
                                                         {
                                                             @String.Format("{0:0.00}", item.DemandQty)
                                                         }
                                                     </td>
+                                                    @if (Model.BillRequisitionTypeId != (int)EnumBillRequisitionType.Overhead)
+                                                    {
+                                                        <td class="text-center availableValue">
+                                                            @String.Format("{0:0.00}", item.RemainingQty - item.DemandQty)
+                                                        </td>
+                                                    }
                                                     <td class="text-center">
                                                         @if (Model.StatusName == EnumBillRequisitionStatus.Pending.ToString() && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.QS).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                         {
-                                                            @Html.TextBoxFor(model => model.DetailDataList[i].UnitRate, new { id = "unitRate_" + i, @class = "form-control unitValue" })
+                                                            @Html.TextBoxFor(model => model.DetailDataList[i].UnitRate, new { value = "0", @class = "form-control unitValue", required = "true" })
+                                                            @Html.ValidationMessageFor(model => model.DetailDataList[i].UnitRate, "", new { @class = "text-danger" })
+                                                            <small class="text-center text-danger errorUnit"></small>
                                                         }
                                                         else
                                                         {
@@ -200,7 +214,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <td colspan="13" style="text-align: right !important">
+                                                    <td colspan="14" style="text-align: right !important">
                                                         <b>Total Amount : </b>
                                                     </td>
                                                     <td id="totalFooter" colspan="2" style="text-align: right !important">
@@ -428,58 +442,92 @@
 @Styles.Render("~/Content/cssjqryUi")
 
 @section scripts {
+    <script>
+    $(".demandValue, .unitValue").on('input', function (event) {
+        LineCalculator();
+    });
 
-    <script type="text/javascript">
+    function LineCalculator() {
+        $("#itemTable tbody tr").each(function () {
+            var getRemainingValue = $(this).find(".remainingValue");
+            var getAvailableValue = $(this).find(".availableValue");
+            var inputDemadValue = $(this).find(".demandValue");
+            var inputUnitValue = $(this).find(".unitValue");
+            var inputTotalValue = $(this).find(".totalValue");
+            var demandMessage = $(this).find(".errorDemand");
+            var unitMessage = $(this).find(".errorUnit");
+            var available = 0;
+            var lineTotal = 0;
 
-        $(".demandValue").on('input', function (event) {
-            LineCalculator();
-            TotalCalculator();
-        });
-
-        $(".unitValue").on('input', function (event) {
-            LineCalculator();
-            TotalCalculator();
-        });
-
-        function LineCalculator() {
-
-            $("#itemTable tbody tr").each(function () {
-                var inputDemadValue = $(this).find(".demandValue");
-                var inputUnitValue = $(this).find(".unitValue");
-                var inputTotalValue = $(this).find(".totalValue");
-
+            if (@Model.BillRequisitionTypeId == @((int)EnumBillRequisitionType.Overhead)) {
                 if (!isNaN(inputDemadValue.val()) && !isNaN(inputUnitValue.val())) {
                     var demandValue = parseFloat(inputDemadValue.val());
                     var unitValue = parseFloat(inputUnitValue.val());
 
-                    var total = 0;
-                    total = demandValue * unitValue;
-                    inputTotalValue.text(total.toFixed(2));
+                    if (demandValue > 0 && unitValue > 0) {
+                        lineTotal = demandValue * unitValue;
+                    } else {
+                        demandValue = unitValue = 0;
+                    }
                 } else {
-                    console.log("Only number is allowed!");
-                    inputTotalValue.text(inputTotalValue.text().toFixed(2));
+                    demandValue = unitValue = 0;
+                    $(demandMessage).text("Only number is allowed!");
+                    $(unitMessage).text("Only number is allowed!");
                 }
 
-            });
-        }
+                inputTotalValue.text(lineTotal.toFixed(2));
+            } else {
+                if (!isNaN(inputDemadValue.val()) && !isNaN(inputUnitValue.val()) && !isNaN(getRemainingValue.text())) {
+                    var demandValue = parseFloat(inputDemadValue.val());
+                    var unitValue = parseFloat(inputUnitValue.val());
+                    var remainingValue = parseFloat(getRemainingValue.text());
 
-        function TotalCalculator() {
-            var showTotalValue = $("#showTotalValue");
-            var total = 0;
+                    if (demandValue > 0 && unitValue > 0) {
+                        if (remainingValue >= demandValue) {
+                            available = remainingValue - demandValue;
+                            $(demandMessage).text("");
+                        } else {
+                            inputDemadValue.val(remainingValue);
+                            demandValue = remainingValue;
+                            available = remainingValue - demandValue;
+                            $(demandMessage).text("Demand cannot exceed remaining!");
+                        }
+                        lineTotal = demandValue * unitValue;
+                    } else {
+                        demandValue = unitValue = 0;
+                    }
 
-            $("#itemTable tbody tr").each(function (event) {
-                var inputTotalValue = $(this).find(".totalValue");
-
-                if (!isNaN(inputTotalValue.text())) {
-                    var totalValue = parseFloat(inputTotalValue.text());
-                    total += totalValue;
+                } else {
+                    demandValue = unitValue = 0;
+                    $(demandMessage).text("Only number is allowed!");
+                    $(unitMessage).text("Only number is allowed!");
                 }
-            });
 
-            showTotalValue.text(total.toFixed(2));
-        }
+                inputTotalValue.text(lineTotal.toFixed(2));
+                getAvailableValue.text(available.toFixed(2));
+            }
+        });
 
         TotalCalculator();
+    }
+
+    function TotalCalculator() {
+        var showTotalValue = $("#showTotalValue");
+        var total = 0;
+
+        $("#itemTable tbody tr").each(function (event) {
+            var inputTotalValue = $(this).find(".totalValue");
+            var totalValue = parseFloat(inputTotalValue.text());
+
+            if (!isNaN(totalValue)) {
+                total += totalValue;
+            }
+        });
+
+        showTotalValue.text(total.toFixed(2));
+    }
+
+    TotalCalculator();
 
     </script>
 }
